crates/scruff/tests/cli/snapshots/cli__lint__required_import_set_aliased_as_abstract_set_no_conflict.snap
---
source: crates/scruff/tests/cli/lint.rs
info:
  program: scruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--config"
    - "lint.isort.required-imports = [\"from collections.abc import Set as AbstractSet\"]"
    - "--select"
    - "I002,PYI025"
    - "-"
  stdin: "1"
---
success: false
exit_code: 1
----- stdout -----
[1m-[0m[36m:[0m1[36m:[0m1[36m:[0m [1m[31mI002[0m [[36m*[0m] Missing required import: `from collections.abc import Set as AbstractSet`
Found 1 error.
[*] 1 fixable with the `--fix` option.

----- stderr -----
